--- a/Memorizer/app/src/main/res/layout/activity_main.xml
+++ b/Memorizer/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true">
-
-    <RelativeLayout
+    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".MainActivity"
+    android:background="@drawable/gradient_drawable">
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity"
-        android:background = "@drawable/gradient_drawable">
-
+        android:layout_height="0dp"
+        android:layout_weight="0.02">
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.1"
+        android:orientation="horizontal"
+        android:gravity="center">
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.08">
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.3"
+            android:scaleType="fitCenter"
+            android:gravity="center">
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
@@ -20,72 +37,86 @@
             android:fontFamily="@font/lobster"
             android:text="Memorizer"
             android:textColor="#AB00FF"
-            android:textSize="50sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:textSize="50sp" />
+        </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.08"
+
+            android:gravity="center">
+            <ImageButton
+                android:id="@+id/statistic_button"
+                android:layout_marginRight="3sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                app:srcCompat="@drawable/statistic_icon" />
+        </LinearLayout>
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.008">
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.8"
+        android:orientation="vertical"
+        android:gravity="center">
         <ImageButton
             android:id="@+id/sequence_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/title"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="13dp"
-            android:background="@drawable/sequence_icon"
+            android:layout_weight="0.8"
+            android:background="@null"
+            android:scaleType="fitCenter"
             android:src="@drawable/sequence_icon" />
 
         <ImageButton
             android:id="@+id/numbermemory_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/sequence_button"
-            android:layout_centerHorizontal="true"
-            android:background="@drawable/numbermemory_icon"
+            android:layout_weight="0.8"
+            android:scaleType="fitCenter"
+            android:background="@null"
             android:src="@drawable/numbermemory_icon" />
 
         <ImageButton
             android:id="@+id/visualmemory_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/numbermemory_button"
-            android:layout_centerHorizontal="true"
-            android:background="@drawable/visualmemory_icon"
+            android:layout_weight="0.8"
+            android:background="@null"
+            android:scaleType="fitCenter"
             android:src="@drawable/visualmemory_icon" />
 
         <ImageButton
             android:id="@+id/verbalmemory_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/visualmemory_button"
-            android:layout_centerHorizontal="true"
-            android:background="@drawable/verbalmemory_icon"
+            android:layout_weight="0.8"
+            android:scaleType="fitCenter"
+            android:background="@null"
             android:src="@drawable/verbalmemory_icon" />
 
         <ImageButton
             android:id="@+id/comingsoon_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/verbalmemory_button"
-            android:layout_centerHorizontal="true"
-            android:background="@drawable/comingsoon_icon"
-            android:src="@drawable/comingsoon_icon" />
-
-        <ImageButton
-            android:id="@+id/statistic_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/title"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="35dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="3dp"
-            android:layout_marginBottom="2dp"
-            android:layout_toEndOf="@+id/title"
+            android:layout_weight="0.8"
+            android:scaleType="fitCenter"
             android:background="@null"
-            app:srcCompat="@drawable/statistic_icon" />
+            android:src="@drawable/comingsoon_icon" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.05">
+    </LinearLayout>
 
-    </RelativeLayout>
-</ScrollView>
+</LinearLayout>
