--- a/Memorizer/app/src/main/res/layout/statistics_layout.xml
+++ b/Memorizer/app/src/main/res/layout/statistics_layout.xml
@@ -103,36 +103,12 @@
         android:layout_below="@+id/radiogroupLayout"
         android:layout_weight="10">
 
-        <TableLayout
-            android:id="@+id/tableLayout"
+        <FrameLayout
+            android:id="@+id/scoreTable"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="30dp"
-            android:paddingRight="30dp"
-            android:stretchColumns="1">
+            android:layout_height="match_parent">
+        </FrameLayout>
 
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:padding="4dip"
-                    android:text="Date and time"
-                    android:textColor="#000000"
-                    android:textSize="18sp" />
-
-                <TextView
-                    android:gravity="right"
-                    android:padding="4dip"
-                    android:text="Score"
-                    android:textColor="#000000"
-                    android:textSize="18sp" />
-            </TableRow>
-
-            <View
-                android:layout_height="2dip"
-                android:background="#FF909090" />
-        </TableLayout>
     </ScrollView>
 
     <RelativeLayout
@@ -142,7 +118,7 @@
         android:layout_weight="3">
 
         <ImageButton
-            android:id="@+id/imageButton2"
+            android:id="@+id/onlineOfflineToggle"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_alignParentRight="true"
