--- a/Memorizer/app/src/main/res/layout/statistics_layout.xml
+++ b/Memorizer/app/src/main/res/layout/statistics_layout.xml
@@ -124,9 +124,22 @@
             android:layout_alignParentRight="true"
             android:layout_centerInParent="true"
             android:layout_marginRight="15dp"
-            android:background="@drawable/personalbest_icon"
+            android:background="@drawable/offline_scoretable_icon"
             android:scaleType="fitCenter"
-            app:srcCompat="@drawable/personalbest_icon" />
+            app:srcCompat="@drawable/offline_scoretable_icon" />
+
+        <TextView
+            android:id="@+id/onlineOfflineText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/onlineOfflineToggle"
+            android:paddingLeft="30dp"
+            android:paddingBottom="15dp"
+            android:text="SHOWING YOUR PERSONAL SCORES"
+            android:fontFamily="@font/staatliches"
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:textSize="20sp"/>
     </RelativeLayout>
 
 </LinearLayout>
