--- a/Memorizer/app/src/main/res/layout/play_layout.xml
+++ b/Memorizer/app/src/main/res/layout/play_layout.xml
@@ -103,7 +103,7 @@
             android:textAlignment="center"
             android:textColor="#000000"
             android:textSize="20sp"
-            android:text="User with xxx points" />
+            android:text="No data available" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
