--- a/Memorizer/app/src/main/res/layout/statistics_offline_fragment.xml
+++ b/Memorizer/app/src/main/res/layout/statistics_offline_fragment.xml
@@ -15,6 +15,7 @@
             android:layout_height="match_parent">
 
             <TextView
+                android:id="@+id/leftHeadTable"
                 android:padding="4dip"
                 android:text="Date and time"
                 android:textColor="#000000"
