--- a/Memorizer/app/src/main/res/layout/gameover_layout.xml
+++ b/Memorizer/app/src/main/res/layout/gameover_layout.xml
@@ -46,7 +46,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:fontFamily="@font/staatliches"
-                android:text="SCORE"
+                android:text="None yet!"
                 android:textColor="@android:color/black"
                 android:textSize="30sp" />
         </LinearLayout>
