--- a/Memorizer/app/src/main/res/layout/statistics_layout.xml
+++ b/Memorizer/app/src/main/res/layout/statistics_layout.xml
@@ -35,7 +35,6 @@
             android:id="@+id/sequencegamebutton"
             android:layout_width="90dp"
             android:layout_height="60dp"
-            android:layout_marginStart="4dp"
             android:background="@drawable/rounded_button"
             android:fontFamily="@font/staatliches"
             android:shadowColor="@color/black"
@@ -53,7 +52,6 @@
             android:id="@+id/numbergamebutton"
             android:layout_width="90dp"
             android:layout_height="60dp"
-            android:layout_marginStart="12dp"
             android:background="@drawable/rounded_button"
             android:fontFamily="@font/staatliches"
             android:shadowColor="@color/black"
@@ -71,7 +69,6 @@
             android:id="@+id/visualgamebutton"
             android:layout_width="90dp"
             android:layout_height="60dp"
-            android:layout_marginStart="12dp"
             android:background="@drawable/rounded_button"
             android:fontFamily="@font/staatliches"
             android:shadowColor="@color/black"
@@ -83,7 +80,8 @@
             app:layout_constraintEnd_toStartOf="@+id/verbalgamebutton"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/numbergamebutton"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
         <Button
             android:id="@+id/verbalgamebutton"
